--- a/2_sagemaker_deployment.ipynb
+++ b/2_sagemaker_deployment.ipynb
@@ -50,6 +50,29 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1336c70f",
+   "metadata": {},
+   "source": [
+    "### Alternative: Using Hugging Face Hub"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "98d10473",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from huggingface_hub import snapshot_download\n",
+    "\n",
+    "repo_id = \"garystafford/wav2vec2-deepfake-voice-detector\"\n",
+    "snapshot_download(repo_id, local_dir=\"wav2vec2-deepfake-voice-detector\")\n",
+    "\n",
+    "print(f\"Model downloaded: {repo_id}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "1f0c1eca",
    "metadata": {},
    "source": [
