Updating model loading methods

--- a/local-inference.ipynb
+++ b/local-inference.ipynb
@@ -60,43 +60,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e1da21ee",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Download the model from Hugging Face Hub (Python equivalent of: hf download <repo_id>)\n",
-    "from pathlib import Path\n",
-    "\n",
-    "REPO_ID = \"garystafford/wav2vec2-deepfake-voice-detector\"\n",
-    "\n",
-    "# Pick a local directory inside the repo (change if you prefer a different location)\n",
-    "local_dir = Path(\"model_download\") / REPO_ID.replace(\"/\", \"__\")\n",
-    "\n",
-    "try:\n",
-    "    from huggingface_hub import snapshot_download\n",
-    "except ImportError as e:\n",
-    "    raise ImportError(\n",
-    "        \"Missing dependency 'huggingface_hub'. Install it with: %pip install huggingface_hub\"\n",
-    "    ) from e\n",
-    "\n",
-    "download_path = snapshot_download(\n",
-    "    repo_id=REPO_ID,\n",
-    "    local_dir=str(local_dir),\n",
-    "    local_dir_use_symlinks=False,\n",
-    "    resume_download=True,\n",
-    "    allow_patterns=[\"*.json\", \"*.safetensors\", \"*.bin\", \"*.txt\", \"*.model\", \"*.py\"],\n",
-    "    ignore_patterns=[\"*.md\"],\n",
-    "    revision=\"main\",\n",
-    "    cache_dir=None,\n",
-    "    token=None,  # set to True / token string if the repo is private\n",
-    ")\n",
-    "\n",
-    "print(f\"Downloaded '{REPO_ID}' to: {download_path}\")"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "e5143014",
    "metadata": {},
@@ -119,22 +82,18 @@
     "# ============================================================================\n",
     "# STEP 1: Load the fine-tuned model from Hugging Face\n",
     "# ============================================================================\n",
-    "model_name_base = \"Gustking/wav2vec2-large-xlsr-deepfake-audio-classification\"\n",
-    "model_name_ft = \"garystafford/wav2vec2-deepfake-voice-detector\"\n",
-    "model_name = model_name_ft  # change to model_name_base to use base model\n",
+    "model_name = \"garystafford/wav2vec2-deepfake-voice-detector\"\n",
     "\n",
     "print(\"Loading model from Hugging Face...\")\n",
     "model = AutoModelForAudioClassification.from_pretrained(model_name)\n",
     "feature_extractor = AutoFeatureExtractor.from_pretrained(model_name)\n",
-    "model.eval()  # Set to evaluation mode\n",
     "\n",
     "# Move to GPU if available\n",
     "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
-    "model.to(device)\n",
+    "model.to(device).eval()\n",
     "print(f\"Model loaded on: {device}\\n\")\n",
     "\n",
-    "\n",
-    "THRESHOLD = 0.40\n",
+    "print(f\"Model:\\n{model}\")\n",
     "\n",
     "\n",
     "# ============================================================================\n",
@@ -186,7 +145,6 @@
     "# ============================================================================\n",
     "# STEP 3: Test audio files\n",
     "# ============================================================================\n",
-    "\n",
     "audio_files = (\n",
     "    glob.glob(\"audio_samples/*.flac\")\n",
     "    + glob.glob(\"audio_samples/*.wav\")\n",
@@ -195,7 +153,7 @@
     "print(f\"\\n\\nTesting {len(audio_files)} files:\\n\")\n",
     "\n",
     "for audio_file in audio_files:\n",
-    "    result = predict_audio(audio_file, threshold=THRESHOLD)\n",
+    "    result = predict_audio(audio_file, threshold=0.40)\n",
     "    pred_symbol = \"🔴\" if result[\"prediction\"] == \"fake\" else \"🟢\"\n",
     "    print(\n",
     "        f\"{pred_symbol} {audio_file.split('/')[-1]:40s} → {result['prediction']:5s} ({result['confidence']:.1%})\"\n",
@@ -220,21 +178,29 @@
    "outputs": [],
    "source": [
     "import torch\n",
-    "from transformers import Wav2Vec2FeatureExtractor, Wav2Vec2ForSequenceClassification\n",
+    "from transformers import AutoFeatureExtractor, AutoModelForAudioClassification\n",
     "import librosa\n",
     "\n",
-    "# Load model from HuggingFace Hub\n",
-    "model_id = \"garystafford/wav2vec2-deepfake-voice-detector\"\n",
-    "feature_extractor = Wav2Vec2FeatureExtractor.from_pretrained(model_id)\n",
-    "model = Wav2Vec2ForSequenceClassification.from_pretrained(model_id)\n",
+    "# ============================================================================\n",
+    "# STEP 1: Load the fine-tuned model from Hugging Face\n",
+    "# ============================================================================\n",
+    "model_name = \"garystafford/wav2vec2-deepfake-voice-detector\"\n",
+    "\n",
+    "print(\"Loading model from Hugging Face...\")\n",
+    "model = AutoModelForAudioClassification.from_pretrained(model_name)\n",
+    "feature_extractor = AutoFeatureExtractor.from_pretrained(model_name)\n",
     "\n",
     "# Move to GPU if available\n",
     "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
-    "model.to(device)\n",
-    "model.eval()\n",
+    "model.to(device).eval()\n",
+    "print(f\"Model loaded on: {device}\\n\")\n",
+    "\n",
+    "print(f\"Model:\\n{model}\")\n",
     "\n",
     "\n",
-    "# Inference function\n",
+    "# ============================================================================\n",
+    "# STEP 2: Define inference function\n",
+    "# ============================================================================\n",
     "def predict_audio(audio_path, threshold=0.4):\n",
     "    # Load and resample to 16kHz\n",
     "    audio, sr = librosa.load(audio_path, sr=16000, mono=True)\n",
@@ -265,7 +231,9 @@
     "    }\n",
     "\n",
     "\n",
-    "# Test on audio file\n",
+    "# ============================================================================\n",
+    "# STEP 3: Perform inference on a sample audio file\n",
+    "# ============================================================================\n",
     "result = predict_audio(\"sample_audio.mp3\", threshold=0.40)\n",
     "print(f\"Prediction: {result['prediction']} ({result['confidence']:.2%})\")"
    ]
