Updating README and comments

--- a/local-inference.ipynb
+++ b/local-inference.ipynb
@@ -17,17 +17,9 @@
    "source": [
     "## Step 1: Environment Setup\n",
     "\n",
-    "Install required dependencies and configure the environment. This includes PyTorch with CUDA support, Transformers, and audio processing libraries."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6d516d43",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%pip install -r requirements.txt -Uq"
+    "First, install required dependencies and configure an existing Python virtual environment(see README for details).\n",
+    "\n",
+    "Install additional dependencies, including PyTorch with CUDA support."
    ]
   },
   {
@@ -45,18 +37,97 @@
    "id": "333sbpbfd63",
    "metadata": {},
    "source": [
-    "## Step 2: Simple Local Inference\n",
+    "## Step 2: Local Inference\n",
     "\n",
-    "This section shows how to load the fine-tuned model from Hugging Face and run inference on your own audio files. Perfect for users who just want to test the model without going through the full training pipeline.\n",
+    "Load the fine-tuned model from Hugging Face and run inference on your own audio files.\n",
     "\n",
     "**Requirements:**\n",
     "- Audio file (mp3, wav, or flac format)\n",
     "- 16kHz sample rate recommended (will auto-convert if different)\n",
     "\n",
     "**Quick start:**\n",
-    "1. Replace `audio_file_path` with your audio file\n",
+    "1. Replace `audio_file_path` with the location of your audio file(s)\n",
     "2. Run the cell\n",
     "3. Get prediction: real or fake audio"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "44512a7f",
+   "metadata": {},
+   "source": [
+    "### Local Inference Routine from Blog Post"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2b227ddf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "import torch\n",
+    "from transformers import AutoFeatureExtractor, AutoModelForAudioClassification\n",
+    "import librosa\n",
+    "\n",
+    "# ============================================================================\n",
+    "# STEP 1: Load the fine-tuned model from Hugging Face\n",
+    "# ============================================================================\n",
+    "model_name = \"garystafford/wav2vec2-deepfake-voice-detector\"\n",
+    "\n",
+    "print(\"Loading model from Hugging Face...\")\n",
+    "model = AutoModelForAudioClassification.from_pretrained(model_name)\n",
+    "feature_extractor = AutoFeatureExtractor.from_pretrained(model_name)\n",
+    "\n",
+    "# Move to GPU if available\n",
+    "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
+    "model.to(device).eval()\n",
+    "print(f\"Model loaded on: {device}\\n\")\n",
+    "\n",
+    "print(f\"Model:\\n{model}\")\n",
+    "\n",
+    "\n",
+    "# ============================================================================\n",
+    "# STEP 2: Define inference function\n",
+    "# ============================================================================\n",
+    "def predict_audio(audio_path, threshold=0.4):\n",
+    "    # Load and resample to 16kHz\n",
+    "    audio, sr = librosa.load(audio_path, sr=16000, mono=True)\n",
+    "\n",
+    "    # Extract features\n",
+    "    inputs = feature_extractor(\n",
+    "        audio, sampling_rate=16000, return_tensors=\"pt\", padding=True\n",
+    "    )\n",
+    "    inputs = {k: v.to(device) for k, v in inputs.items()}\n",
+    "\n",
+    "    # Run inference\n",
+    "    with torch.no_grad():\n",
+    "        outputs = model(**inputs)\n",
+    "        logits = outputs.logits\n",
+    "\n",
+    "    # Convert to probabilities\n",
+    "    probs = torch.nn.functional.softmax(logits, dim=-1)\n",
+    "    prob_real = probs[0][0].item()\n",
+    "    prob_fake = probs[0][1].item()\n",
+    "\n",
+    "    # Make prediction\n",
+    "    prediction = \"fake\" if prob_fake >= threshold else \"real\"\n",
+    "\n",
+    "    return {\n",
+    "        \"prediction\": prediction,\n",
+    "        \"confidence\": max(prob_real, prob_fake),\n",
+    "        \"probabilities\": {\"real\": prob_real, \"fake\": prob_fake},\n",
+    "    }\n",
+    "\n",
+    "\n",
+    "# ============================================================================\n",
+    "# STEP 3: Perform inference on a sample audio file\n",
+    "# ============================================================================\n",
+    "audio_file_path = \"sample_audio.mp3\"  # Replace with your audio file path\n",
+    "result = predict_audio(audio_file_path, threshold=0.40)\n",
+    "print(json.dumps(result, indent=2))\n",
+    "print(f\"Prediction: {result['prediction']} ({result['confidence']:.2%})\")"
    ]
   },
   {
@@ -64,7 +135,7 @@
    "id": "e5143014",
    "metadata": {},
    "source": [
-    "### Local Inference: Multiple Files"
+    "### Local Inference with Multiple Files"
    ]
   },
   {
@@ -80,7 +151,7 @@
     "import glob\n",
     "\n",
     "# ============================================================================\n",
-    "# STEP 1: Load the fine-tuned model from Hugging Face\n",
+    "# STEP 1: Load the fine-tuned model from Hugging Face (1x from local or HF)\n",
     "# ============================================================================\n",
     "model_name = \"garystafford/wav2vec2-deepfake-voice-detector\"\n",
     "\n",
@@ -145,10 +216,11 @@
     "# ============================================================================\n",
     "# STEP 3: Test audio files\n",
     "# ============================================================================\n",
+    "audio_file_path = \"audio_samples\"  # Replace with your audio file path\n",
     "audio_files = (\n",
-    "    glob.glob(\"audio_samples/*.flac\")\n",
-    "    + glob.glob(\"audio_samples/*.wav\")\n",
-    "    + glob.glob(\"audio_samples/*.mp3\")\n",
+    "    glob.glob(audio_file_path + \"/*.flac\")\n",
+    "    + glob.glob(audio_file_path + \"/*.wav\")\n",
+    "    + glob.glob(audio_file_path + \"/*.mp3\")\n",
     ")\n",
     "print(f\"\\n\\nTesting {len(audio_files)} files:\\n\")\n",
     "\n",
@@ -163,80 +235,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "44512a7f",
-   "metadata": {},
-   "source": [
-    "### Local Inference Code from Blog Post"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2b227ddf",
+   "id": "67cf861b",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "import torch\n",
-    "from transformers import AutoFeatureExtractor, AutoModelForAudioClassification\n",
-    "import librosa\n",
-    "\n",
-    "# ============================================================================\n",
-    "# STEP 1: Load the fine-tuned model from Hugging Face\n",
-    "# ============================================================================\n",
-    "model_name = \"garystafford/wav2vec2-deepfake-voice-detector\"\n",
-    "\n",
-    "print(\"Loading model from Hugging Face...\")\n",
-    "model = AutoModelForAudioClassification.from_pretrained(model_name)\n",
-    "feature_extractor = AutoFeatureExtractor.from_pretrained(model_name)\n",
-    "\n",
-    "# Move to GPU if available\n",
-    "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
-    "model.to(device).eval()\n",
-    "print(f\"Model loaded on: {device}\\n\")\n",
-    "\n",
-    "print(f\"Model:\\n{model}\")\n",
-    "\n",
-    "\n",
-    "# ============================================================================\n",
-    "# STEP 2: Define inference function\n",
-    "# ============================================================================\n",
-    "def predict_audio(audio_path, threshold=0.4):\n",
-    "    # Load and resample to 16kHz\n",
-    "    audio, sr = librosa.load(audio_path, sr=16000, mono=True)\n",
-    "\n",
-    "    # Extract features\n",
-    "    inputs = feature_extractor(\n",
-    "        audio, sampling_rate=16000, return_tensors=\"pt\", padding=True\n",
-    "    )\n",
-    "    inputs = {k: v.to(device) for k, v in inputs.items()}\n",
-    "\n",
-    "    # Run inference\n",
-    "    with torch.no_grad():\n",
-    "        outputs = model(**inputs)\n",
-    "        logits = outputs.logits\n",
-    "\n",
-    "    # Convert to probabilities\n",
-    "    probs = torch.nn.functional.softmax(logits, dim=-1)\n",
-    "    prob_real = probs[0][0].item()\n",
-    "    prob_fake = probs[0][1].item()\n",
-    "\n",
-    "    # Make prediction\n",
-    "    prediction = \"fake\" if prob_fake >= threshold else \"real\"\n",
-    "\n",
-    "    return {\n",
-    "        \"prediction\": prediction,\n",
-    "        \"confidence\": max(prob_real, prob_fake),\n",
-    "        \"probabilities\": {\"real\": prob_real, \"fake\": prob_fake},\n",
-    "    }\n",
-    "\n",
-    "\n",
-    "# ============================================================================\n",
-    "# STEP 3: Perform inference on a sample audio file\n",
-    "# ============================================================================\n",
-    "result = predict_audio(\"sample_audio.mp3\", threshold=0.40)\n",
-    "print(f\"Prediction: {result['prediction']} ({result['confidence']:.2%})\")"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -255,7 +259,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.12.12"
   }
  },
  "nbformat": 4,
