--- a/sagemaker-deployment.ipynb
+++ b/sagemaker-deployment.ipynb
@@ -17,17 +17,7 @@
    "source": [
     "## Step 1: Environment Setup\n",
     "\n",
-    "Install required dependencies and configure the environment."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c7a4c7c5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%pip install -r requirements.txt -Uq"
+    "First, install required dependencies and configure an existing Python virtual environment(see README for details)."
    ]
   },
   {
@@ -37,23 +27,7 @@
    "source": [
     "## Step 2: Download Model\n",
     "\n",
-    "Clone the Deepfake model of your choice using `git-xet`:\n",
-    "\n",
-    "```bash\n",
-    "# Make sure git-xet is installed (https://hf.co/docs/hub/git-xet)\n",
-    "brew install git-xet\n",
-    "git xet install\n",
-    "\n",
-    "git clone https://huggingface.co/garystafford/wav2vec2-deepfake-voice-detector\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "1336c70f",
-   "metadata": {},
-   "source": [
-    "### Alternative: Using Hugging Face Hub"
+    "Clone the Deepfake model from Hugging Face Model Hub to your local environment."
    ]
   },
   {
@@ -89,19 +63,7 @@
     "  └─ code/\n",
     "      ├─ inference.py\n",
     "      └─ requirements.txt\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c2f29e94",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%sh\n",
-    "\n",
-    "python prepare_sagemaker_model.py --model-path wav2vec2-deepfake-voice-detector"
+    "```\n"
    ]
   },
   {
@@ -119,16 +81,28 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6016743d",
+   "id": "18d27dc0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
+    "import shutil\n",
+    "from pathlib import Path\n",
     "\n",
-    "# Set an environment variable for your existing Sagemaker Execution Role ARN\n",
-    "os.environ[\"SAGEMAKER_ROLE_ARN\"] = (\n",
-    "    \"arn:aws:iam::676164205626:role/service-role/AmazonSageMaker-ExecutionRole-<your-role-id>\"\n",
-    ")"
+    "# Create model directory and copy files\n",
+    "model_dir = Path(\"model\")\n",
+    "model_dir.mkdir(exist_ok=True)\n",
+    "\n",
+    "source_dir = Path(\"wav2vec2-deepfake-voice-detector\")\n",
+    "files_to_copy = [\"preprocessor_config.json\", \"config.json\", \"model.safetensors\"]\n",
+    "\n",
+    "for file in files_to_copy:\n",
+    "    source = source_dir / file\n",
+    "    destination = model_dir / file\n",
+    "    if source.exists():\n",
+    "        shutil.copy2(source, destination)\n",
+    "        print(f\"Copied {file} to {model_dir}\")\n",
+    "    else:\n",
+    "        raise FileNotFoundError(f\"Required file not found: {source}\")"
    ]
   },
   {
@@ -192,6 +166,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7e17d88d",
+   "metadata": {},
+   "source": [
+    "### AWS Authentication and Authorization\n",
+    "\n",
+    "You must be authenticated and authorized in AWS CLI to upload model artifacts to S3 and deploy on SageMaker."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6016743d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "\n",
+    "# CHANGE ME: Set to your existing Sagemaker Execution Role ARN\n",
+    "os.environ[\"SAGEMAKER_ROLE_ARN\"] = (\n",
+    "    \"arn:aws:iam::<account-id>:role/service-role/AmazonSageMaker-ExecutionRole-<unique-id>\"\n",
+    ")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "ecf55ca1",
@@ -236,6 +235,7 @@
     "file_name = os.path.basename(artifact_path)\n",
     "s3_key = f\"{key_prefix}/{file_name}\"\n",
     "\n",
+    "# Takes 25-30 seconds on average\n",
     "s3.upload_file(artifact_path, default_bucket, s3_key)\n",
     "\n",
     "model_s3_path = f\"s3://{default_bucket}/{s3_key}\"\n",
@@ -301,7 +301,7 @@
     "\n",
     "globals()[\"custom_endpoint_model_name\"] = custom_endpoint_model_name\n",
     "\n",
-    "# Takes 7-11 minutes to deploy endpoint\n",
+    "# Takes 10-11 minutes to deploy endpoint on average\n",
     "predictor = custom_model.deploy(\n",
     "    initial_instance_count=1,\n",
     "    instance_type=instance_type,\n",
@@ -335,11 +335,8 @@
     "import json\n",
     "import boto3\n",
     "\n",
-    "# Prefer the endpoint created by the deploy cell; otherwise use a known endpoint name.\n",
-    "endpoint_name = \"<your-endpoint-name>\"  # replace with your endpoint name if needed\n",
-    "assert (\n",
-    "    endpoint_name and endpoint_name != \"<your-endpoint-name>\"\n",
-    "), \"Set endpoint_name first\"\n",
+    "# Replace with the endpoint created by the deploy cell above if done separately\n",
+    "endpoint_name = globals()[\"custom_endpoint_model_name\"] or \"<your-endpoint-name>\"\n",
     "\n",
     "\n",
     "def canonical_label(label: str | None) -> str | None:\n",
@@ -429,6 +426,14 @@
     "        print(\"  probabilities_canonical:\", probs)\n",
     "    print()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3152beb7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
