--- a/sagemaker-deployment.ipynb
+++ b/sagemaker-deployment.ipynb
@@ -144,8 +144,6 @@
     "import os\n",
     "import tarfile\n",
     "\n",
-    "artifact_path = globals().get(\"artifact_path\", \"model.tar.gz\")\n",
-    "\n",
     "assert os.path.isfile(artifact_path), f\"Missing artifact: {artifact_path}\"\n",
     "\n",
     "with tarfile.open(artifact_path, \"r:gz\") as tar:\n",
@@ -299,8 +297,6 @@
     "print(f\"Deploying to endpoint: {custom_endpoint_model_name}\")\n",
     "print(\"Container env:\", container_env)\n",
     "\n",
-    "globals()[\"custom_endpoint_model_name\"] = custom_endpoint_model_name\n",
-    "\n",
     "# Takes 10-11 minutes to deploy endpoint on average\n",
     "predictor = custom_model.deploy(\n",
     "    initial_instance_count=1,\n",
@@ -335,8 +331,8 @@
     "import json\n",
     "import boto3\n",
     "\n",
-    "# Replace with the endpoint created by the deploy cell above if done separately\n",
-    "endpoint_name = globals()[\"custom_endpoint_model_name\"] or \"<your-endpoint-name>\"\n",
+    "# CHANGE ME: Set to your existing endpoint name\n",
+    "endpoint_name = \"<your-endpoint-name>\"\n",
     "\n",
     "\n",
     "def canonical_label(label: str | None) -> str | None:\n",
