--- a/sagemaker-deployment.ipynb
+++ b/sagemaker-deployment.ipynb
@@ -170,7 +170,7 @@
    "source": [
     "### AWS Authentication and Authorization\n",
     "\n",
-    "You must be authenticated and authorized in AWS CLI to upload model artifacts to S3 and deploy on SageMaker."
+    "You must be authenticated and authorized in AWS CLI to upload model artifacts to S3 and deploy on SageMaker (`aws sso login` or `aws configure`)."
    ]
   },
   {
